--- a/about.html
+++ b/about.html
@@ -59,8 +59,8 @@
         </div>
         <div>
             <p>
-                As a kid, I was very shy. I was diagnosed with selective mutism when I was young. 
-                Selective mutism is a severe anxiety disorder where the person will not talk in certain social situations.        
+                As a kid, I was very shy. I was diagnosed with <a href="https://www.asha.org/public/speech/disorders/selective-mutism/" target="_blank">selective mutism</a> 
+                when I was young. Selective mutism is a severe anxiety disorder where the person will not talk in certain social situations.        
             </p>        
         </div>
         <div>
