--- a/books.html
+++ b/books.html
@@ -49,36 +49,36 @@
         </div>
         <div class="parent">
             <figure class="1">
-                <img alt="coffee" 
-                src="media/small/beforethecoffee.jpg" height="242" width="175" loading="lazy" class="shadow">
+                <a href="https://www.goodreads.com/book/show/44421460-before-the-coffee-gets-cold" target="_blank"><img alt="coffee" 
+                src="media/small/beforethecoffee.jpg" height="242" width="175" loading="lazy" class="shadow"> </a>
             </figure>
         </div>
         <div class="parent">
             <figure class="2">
-                <img alt="subtle art"
-                src="media/small/thesubtleart.jpg" height="262" width="175" loading="lazy" class="shadow">
+                <a href="https://markmanson.net/books/subtle-art" target="_blank"><img alt="subtle art"
+                src="media/small/thesubtleart.jpg" height="262" width="175" loading="lazy" class="shadow"> </a>
             </figure>
         </div>
         <div class="parent">
             <figure class="3">
-                <img alt="everything is fucked" src="media/small/eif.jpg" height="264" width="175" loading="lazy" class="shadow">
+                <a href="https://markmanson.net/books/everything-is-fucked" target="_blank"><img alt="everything is fucked" src="media/small/eif.jpg" height="264" width="175" loading="lazy" class="shadow"> </a>
             </figure>
         </div>
         <div class="parent">
             <figure class="4">
-                <img src="media/small/getyourshittogether.jpg" height="247" width="175" alt="get your shit together" loading="lazy" class="shadow">
+                <a href="https://www.sarahknight.com/books/gyst/" target="_blank"><img src="media/small/getyourshittogether.jpg" height="247" width="175" alt="get your shit together" loading="lazy" class="shadow"> </a>
             </figure>
         </div>
         <div class="parent">
             <figure class="5">
-                <img alt="creative confidence" 
-                src="media/small/creativeconfidence.jpg" height="269" width="175" loading="lazy" class="shadow">
+                <a href="https://www.creativeconfidence.com/" target="_blank"><img alt="creative confidence" 
+                src="media/small/creativeconfidence.jpg" height="269" width="175" loading="lazy" class="shadow"> </a>
             </figure>
         </div>
         <div class="parent">
             <figure class="6">
-                <img alt="thinking fast and slow" 
-                src="media/small/thinkingfastandslow.jpg" height="276" width="175" loading="lazy" class="shadow">
+                <a href="https://www.goodreads.com/book/show/11468377-thinking-fast-and-slow" target="_blank"><img alt="thinking fast and slow" 
+                src="media/small/thinkingfastandslow.jpg" height="276" width="175" loading="lazy" class="shadow"> </a>
             </figure>
         </div>
     </main>
