--- a/contact.html
+++ b/contact.html
@@ -50,12 +50,12 @@
         </div>
         <div>
             <p>
-                Email: gia.tranchitella@gmail.com
+                Email: <a href="mailto:gia.tranchitella@gmail.com">gia.tranchitella@gmail.com</a>   
             </p>     
         </div>
         <div>
             <p>
-                Instagram: @gtranchitella
+                Instagram: @<a href="https://www.instagram.com/gtranchitella/">gtranchitella</a>
             </p>        
         </div>
         <div>
