Adding in new logo image

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div>
             <figure class="logo">
                 <img alt="A Peak Into My Life" 
-                src="media/small/logo.jpg" height="339" width="350" loading="lazy">
+                src="media/small/logo2.jpg" height="300" width="300" loading="lazy">
             </figure>
         </div>
     </main>
