Making link open in new tab

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
         </div>
         <div>
             <p>
-                Instagram: @<a href="https://www.instagram.com/gtranchitella/">gtranchitella</a>
+                Instagram: @<a href="https://www.instagram.com/gtranchitella/" target="_blank">gtranchitella</a>
             </p>        
         </div>
         <div>
