Adding more html content

--- a/embroidery.html
+++ b/embroidery.html
@@ -72,6 +72,15 @@
                 </div>
             </div>
         </div>
+        <div>
+            <p>Below is my next project I will be working on soon!</p>
+        </div>
+        <div>
+            <figure>
+                <a href="https://littletruthsstudio.com/collections/embroidery-kits/products/noticing-the-little-things-embroidery-kit" 
+                target="_blank"><img src="media/small/mushroom.jpg" alt="mushroom embroidery kit" height="306" width="300" loading="lazy" class="shadow"></a>
+            </figure>
+        </div>
     </main>
     <footer>
         <p>Copyright © 2023 Gia Tranchitella</p>
