fixing alt tags

--- a/experience.html
+++ b/experience.html
@@ -69,7 +69,7 @@
          <!--ADD LOGO IMAGE FOR COMPANY-->
         <div>
             <figure>
-                <img src="media/small/dreamitventures.jpg" alt="Startup Wars" height="108" width="325" loading="lazy" class="shadow">
+                <img src="media/small/dreamitventures.jpg" alt="DreamIt Ventures" height="108" width="325" loading="lazy" class="shadow">
             </figure>
         </div>
         <div>
@@ -93,7 +93,7 @@
         <!--ADD LOGO IMAGE FOR COMPANY-->
         <div>
             <figure>
-                <img src="media/small/plf.avif" alt="Startup Wars" height="230" width="260" loading="lazy" class="shadow">
+                <img src="media/small/plf.avif" alt="Pepper Lane Fudge & Sweets" height="230" width="260" loading="lazy" class="shadow">
             </figure>
         </div>
         <div>
