--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
         </div>
         <div>
             <figure class="logo">
-                <img alt="A Peak Into My Life" 
+                <img alt="A Peek Into My Life" 
                 src="media/small/logo2.jpg" height="300" width="300" loading="lazy">
             </figure>
         </div>
