Adding mark element to a elements

--- a/contact.html
+++ b/contact.html
@@ -37,12 +37,12 @@
         </div>
         <div>
             <p>
-                Email: <a href="mailto:gia.tranchitella@gmail.com">gia.tranchitella@gmail.com</a>   
+                Email: <mark><a href="mailto:gia.tranchitella@gmail.com">gia.tranchitella@gmail.com</a></mark>  
             </p>     
         </div>
         <div>
             <p>
-                Instagram: @<a href="https://www.instagram.com/gtranchitella/" target="_blank">gtranchitella</a>
+                Instagram: @<mark><a href="https://www.instagram.com/gtranchitella/" target="_blank">gtranchitella</a></mark>
             </p>        
         </div>
         <div>
