--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <div>
             <p>
                 I have been struggling with my own mental health for several years now. I am currently diagnosed with an 
-                <a href="https://www.hopkinsmedicine.org/health/conditions-and-diseases/mood-disorders"
-                target="_blank">unspecified mood disorder</a>. 
+                <mark><a href="https://www.hopkinsmedicine.org/health/conditions-and-diseases/mood-disorders"
+                target="_blank">unspecified mood disorder</a></mark>. 
                 Basically what that means is I struggle with emotional regulation and staying in a 
-                <a href="https://dbtselfhelp.com/dbt-skills-list/mindfulness/wise-mind/" target="_blank">wise mind</a> in respect to relationships.
+                <mark><a href="https://dbtselfhelp.com/dbt-skills-list/mindfulness/wise-mind/" target="_blank">wise mind</a></mark> in respect to relationships.
             </p>
         </div>
         <div>
