--- a/embroidery.html
+++ b/embroidery.html
@@ -34,13 +34,13 @@
                     sizes="(min-width: 600px) 75vw, 100vw">
                 </figure>
             </div>
-            <p>
+            <p class="embroidery">
                 My recently started and current hobby I started a couple of months ago is embroidering. 
                 My sister, Marisa, gave me some of her materials to borrow - she had done embroidering too.         
             </p>        
         </div>
         <div>
-            <p>
+            <p class="embroidery">
                 Below are some of the projects I have created so far! :D        
             </p>
         </div>
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div>
-            <p>Below is my next project I will be working on soon!</p>
+            <p class="embroidery">Below is my next project I will be working on soon!</p>
         </div>
         <div>
             <figure>
