Implementing polaroid visual

--- a/books.html
+++ b/books.html
@@ -35,6 +35,17 @@
                 sizes="(max-width: 600px) 75vw, 100vw">
             </figure>
         </div>
+        <div>
+            <div>
+                <figure class="polaroid">
+                    <img src="media/new/btcgc.jpg" alt="Before The Coffee Gets Cold" height="300" width="400" class="border">
+                    <figcaption><h2>Before The Coffee Gets Cold</h2>
+                    <p>This book is a novel about going back in time through a coffee shop.</p></figcaption>
+                </figure>
+            </div>
+        </div>
+
+        <!--
         <div class="container">
             <div class="parent">
                 <figure>
@@ -69,8 +80,8 @@
                     <a href="https://www.goodreads.com/book/show/11468377-thinking-fast-and-slow" target="_blank"><img alt="thinking fast and slow" 
                     src="media/small/thinkingfastandslow.jpg" height="276" width="175" loading="lazy" class="shadow"> </a>
                 </figure>
-            </div>
-        </div>
+            </div> 
+        </div> -->
     </main>
     <footer>
         <p>Copyright © 2023 Gia Tranchitella</p>
