Implementing the card design

--- a/books.html
+++ b/books.html
@@ -35,12 +35,53 @@
                 sizes="(max-width: 600px) 75vw, 100vw">
             </figure>
         </div>
-        <div>
+        <div class="container">
             <div>
-                <figure class="polaroid">
+                <figure class="card">
                     <img src="media/new/btcgc.jpg" alt="Before The Coffee Gets Cold" height="300" width="400" class="border">
                     <figcaption><h2>Before The Coffee Gets Cold</h2>
-                    <p>This book is a novel about going back in time through a coffee shop.</p></figcaption>
+                    <p class="pc">This book is a novel about going back in time. The setting takes place at a coffee shop.</p></figcaption>
+                    <a href="https://www.goodreads.com/book/show/44421460-before-the-coffee-gets-cold" target="_blank" class="button">Learn More!</a>
+                </figure>
+            </div>
+            <div>
+                <figure class="card">
+                    <img src="media/new/subtle.jpg" alt="The Subtle Art of Not Giving A F*ck" height="265" width="400">
+                    <figcaption><h2>The Subtle Art of Not Giving&nbsp;A&nbsp;F*ck</h2>
+                    <p class="pc">This self-help guide is a counterintuitive approach to living a good and healthy live.</p></figcaption>
+                    <a href="https://markmanson.net/books/subtle-art" target="_blank" class="button">Learn More!</a>
+                </figure>
+            </div>
+            <div>
+                <figure class="card">
+                    <img src="media/new/eif.jpg" alt="Everything is F*cked" height="300" width="400">
+                    <figcaption><h2>Everything is F*cked</h2>
+                    <p class="pc">Everything is F*cked is a book about hope - it is the sequel to The Subtle Art of Not Giving A F*ck.</p></figcaption>
+                    <a href="https://markmanson.net/books/everything-is-fucked" target="_blank" class="button">Learn More!</a>
+                </figure>
+            </div>
+            <div>
+                <figure class="card">
+                    <img src="media/new/gyst.jpg" alt="Get You Sh*t Together" height="300" width="400">
+                    <figcaption><h2>Get Your Sh*t Together</h2>
+                    <p class="pc">Sarah Knight gives us a guide about living your best life and focusing on what you want to do.</p></figcaption>
+                    <a href="https://www.sarahknight.com/books/gyst/" target="_blank" class="button">Learn More!</a>
+                </figure>
+            </div>
+            <div>
+                <figure class="card">
+                    <img src="media/new/cc.jpg" alt="Creative Confidence" height="300" width="400">
+                    <figcaption><h2>Creative Confidence</h2>
+                    <p class="pc">Creative Confidence is about unleashing the creative potential that is within all of us.</p></figcaption>
+                    <a href="https://www.creativeconfidence.com/" target="_blank" class="button">Learn More!</a>
+                </figure>
+            </div>
+            <div>
+                <figure class="card">
+                    <img src="media/new/tf&s.jpg" alt="Thinking Fast and Slow" height="300" width="400">
+                    <figcaption><h2>Thinking Fast and Slow</h2>
+                    <p class="pc">Daniel Kahneman writes about the two thinking systems we have and describes their benefits.</p></figcaption>
+                    <a href="https://www.goodreads.com/book/show/11468377-thinking-fast-and-slow" target="_blank" class="button">Learn More!</a>
                 </figure>
             </div>
         </div>
