--- a/books.html
+++ b/books.html
@@ -32,7 +32,7 @@
             <figure>
                 <img srcset="media/large/largebooks.jpg 1024w, media/medium/mediumbooks.jpg 640w, media/small/smallbooks.jpg 320w"
                 src="media/small/smallbooks.jpg" alt="stacked books" 
-                sizes="(max-width: 600px) 75vw, 100vw">
+                sizes="(min-width: 600px) 75vw, 100vw">
             </figure>
         </div>
         <div class="container">
