Adding bigger responsive photo to experience

--- a/experience.html
+++ b/experience.html
@@ -38,7 +38,9 @@
         </div>
         <div>
             <figure>
-                <img src="media/small/openforge.jpg" alt="Startup Wars" height="183" width="325" loading="lazy" class="shadow">
+                <img srcset="media/medium/openforge.jpg 650w, media/small/openforge.jpg 325w"
+                src="media/small/openforge.jpg" alt="Startup Wars" loading="lazy" class="shadow"
+                sizes="(min-width: 650px) 50vw, 95vw">
             </figure>
         </div>
         <div>
