--- a/experience.html
+++ b/experience.html
@@ -10,11 +10,11 @@
 <body>
     <nav>
         <div id="main">
-            <button class="openbtn" onclick="openNav()">☰</button>  
+            <button class="openbtn" onclick="toggleNav()">☰</button>  
         </div>
         <div>
             <div id="mySidebar" class="sidebar">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+                <button class="closebtn" onclick="toggleNav()">×</button>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="books.html">Books</a>
@@ -112,16 +112,6 @@
     <footer>
         <p>Copyright © 2023 Gia Tranchitella</p>
     </footer>
-    <script>
-        function openNav() {
-        document.getElementById("mySidebar").style.width = "250px";
-        document.getElementById("main").style.marginLeft = "250px";
-        }
-        
-        function closeNav() {
-        document.getElementById("mySidebar").style.width = "0";
-        document.getElementById("main").style.marginLeft= "0";
-        }
-    </script>
+    <script src="js/main.js"></script>
 </body>
 </html>
