--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <nav>
 
         <div id="main">
-            <button class="openbtn" onclick="openNav()">☰</button>  
+            <button class="openbtn" onclick="toggleNav()">☰</button>  
         </div>
         <div>
             <div id="mySidebar" class="sidebar">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+                <button class="closebtn" onclick="toggleNav()">×</button>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="books.html">Books</a>
@@ -59,16 +59,6 @@
     <footer>
         <p>Copyright © 2023 Gia Tranchitella</p>
     </footer>
-    <script>
-        function openNav() {
-          document.getElementById("mySidebar").style.width = "250px";
-          document.getElementById("main").style.marginLeft = "250px";
-        }
-        
-        function closeNav() {
-          document.getElementById("mySidebar").style.width = "0";
-          document.getElementById("main").style.marginLeft= "0";
-        }
-    </script>
+    <script src="js/main.js"></script>
 </body>
 </html>
