Adding card style to embroidery page

--- a/embroidery.html
+++ b/embroidery.html
@@ -76,9 +76,12 @@
             <p class="embroidery">Below is my next project I will be working on soon!</p>
         </div>
         <div>
-            <figure>
+            <figure class="card">
+                <img src="media/small/mushroom.jpg" alt="Mushroom Embroidery Kit" height="306" width="300" class="border">
+                <figcaption><h2>Mushroom Embroidery Kit</h2>
+                <p class="pc">This kit is my next project, which my sister got me for Christmas.</p></figcaption>
                 <a href="https://littletruthsstudio.com/collections/embroidery-kits/products/noticing-the-little-things-embroidery-kit" 
-                target="_blank"><img src="media/small/mushroom.jpg" alt="mushroom embroidery kit" height="306" width="300" loading="lazy" class="shadow"></a>
+                target="_blank" class="button">Buy Me!</a>
             </figure>
         </div>
     </main>
