--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <nav>
         <div id="main">
-                <button class="openbtn" onclick="toggleNav()"><img src="media/notphotoshopped/hamburger.svg" height="50" width="50"></button>  
+                <button class="openbtn" onclick="toggleNav()"><img src="media/notphotoshopped/hamburger.svg" alt="Hamburger icon" height="50" width="50"></button>  
         </div>
         <div>
             <div id="mySidebar" class="sidebar">
-                <button class="closebtn" onclick="toggleNav()"><img src="media/notphotoshopped/close.svg" height="50" width="50"></button>
+                <button class="closebtn" onclick="toggleNav()"><img src="media/notphotoshopped/close.svg" alt="Close icon" height="50" width="50"></button>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="books.html">Books</a>
